# sdm845-abootctl

./: .gitignore  Cargo.toml  README.md
src/: main.rs  partitions.rs
